--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: RMTL
 Type: Package
+Imports: MASS, psych, corpcor, fields
 Title: RMTL: An R library for Multi-Task Learning 
 Version: 1.0
 Date: 2018-04-20
