--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,15 @@ Package: RMTL
 Type: Package
 Imports: MASS, psych, corpcor, fields
 Title: RMTL: An R library for Multi-Task Learning 
-Version: 1.0
+Version: 0.9
 Date: 2018-04-20
-Author: <han.cao@zi-mannheim.de>
-Maintainer: <han.cao@zi-mannheim.de>
+Authors@R: c(person("Han", "Cao", role=c("aut", "cre", "cph"),
+		    email=c("hank9cao@gmail.com",
+			    "han.cao@zi-mannheim.de")), 
+             person("Emanuel", "Schwarz", role="aut", 
+                 email="emanuel.schwarz@zi-mannheim.de"))
+Author: Han Cao, Emanuel Schwarz
+Maintainer: Han Cao <hank9cao@gmail.com>
 Description: This package provides an efficient implementation of regularized multi-task learning comprising 10 algorithms applicable for regression, classification, joint feature selection, task clustering, low-rank learning, sparse learning and network incorporation. All algorithms are implemented basd on the accelerated gradient descent method and feature a complexity of O(1/k^2). Sparse model structure is induced by the solving the proximal operator.
 License: GPL-3
-
-
+Depends: R (>= 3.5.0)
